# arabic_dialects_qna_llm

./: LLM_Question_Generation.ipynb  README.md  llm_questions_generation.py  pyproject.toml
